Swap old image URL with new placeholder image

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         The alternate image link to use for practice: 
                         https://placehold.co/400x250/007AFF/ffffff?text=New+Image+Swapped 
                     -->
-                    <img src="https://placehold.co/400x250/22C55E/ffffff?text=OLD+IMAGE+TO+REPLACE" 
+                    <img src=" https://placehold.co/400x250/007AFF/ffffff?text=New+Image+Swapped" 
                          alt="Placeholder image showing a green graphic ready to be swapped" 
                          class="rounded-lg shadow-lg w-full max-w-xs sm:max-w-md">
                 </div>
